--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
+    "bluebird": "^3.5.1",
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "mongoose": "^5.0.0-rc0",
     "nodemon": "^1.14.6"
   }
 }
