Add vscode debug options

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,10 @@ services:
     container_name: app
     restart: always
     build: .
+    command: yarn start
     volumes:
       - .:/user/src/app
     ports:
       - "3000:3000"
+      - "5858:5858"
+      - "9229:9229"
